# LikesProgram

./: .gitignore  LICENSE  LikesProgram String Format 规范 v0.1.md  LikesProgram.sln  NOTICE  README.md
LikesProgram/: CMakeLists.txt  LikesProgram.vcxproj  LikesProgram.vcxproj.filters  memlog.csv
LikesProgram/cmake/: CompilerWarnings.cmake  Config.cmake.in  LikesProgramMacros.cmake
LikesProgram/include/LikesProgram/: Configuration.hpp  CoreUtils.hpp  LikesProgramLibExport.hpp  Logger.hpp  String.hpp  ThreadPool.hpp  Timer.hpp
LikesProgram/include/LikesProgram/StringFormat/: FormatParser.hpp
LikesProgram/include/LikesProgram/config/: Configuration.hpp  JsonSerializer.hpp
LikesProgram/include/LikesProgram/log/: Logger.hpp  LoggerType.hpp
LikesProgram/include/LikesProgram/log/sinks/: ConsoleSink.hpp  FileSink.hpp  Sink.hpp
LikesProgram/include/LikesProgram/math/: Math.hpp  PercentileSketch.hpp  Vector.hpp  Vector3.hpp  Vector4.hpp
LikesProgram/include/LikesProgram/metrics/: Counter.hpp  Gauge.hpp  Histogram.hpp  Metrics.hpp  Registry.hpp  Summary.hpp
LikesProgram/include/LikesProgram/net/: Address.hpp  Broadcast.hpp  Buffer.hpp  Channel.hpp  Client.hpp  Connection.hpp  EventLoop.hpp  IOEvent.hpp  MainEventLoop.hpp  Poller.hpp  Server.hpp  SocketType.hpp  Transport.hpp
LikesProgram/include/LikesProgram/net/pollers/: EpollPoller.hpp  WindowsSelectPoller.hpp
LikesProgram/include/LikesProgram/server/: Buffer.hpp  Channel.hpp  Connection.hpp  EventLoop.hpp  IOEvent.hpp  Poller.hpp  Server.hpp  Transport.hpp
LikesProgram/include/LikesProgram/server/pollers/: EpollPoller.hpp  WindowsSelectPoller.hpp
LikesProgram/include/LikesProgram/stringFormat/: FormatInternal.hpp
LikesProgram/include/LikesProgram/stringFormat1/: FormatParser.hpp  FormatSpec.hpp
LikesProgram/include/LikesProgram/system/: CoreUtils.hpp  ErrorCode.hpp  ErrorDomainRegistry.hpp  LikesProgramError.hpp  LikesProgramLibExport.hpp
LikesProgram/include/LikesProgram/threading/: IThreadPoolObserver.hpp  ThreadPool.hpp
LikesProgram/include/LikesProgram/time/: Time.hpp  Timer.hpp
LikesProgram/include/LikesProgram/unicode/: Case.hpp  Convert.hpp  Unicode.hpp
LikesProgram/include/test/: ConfigurationTest.hpp  LoggerTest.hpp  MetricsTest.hpp  PercentileSketchTest.hpp  ServerTest.hpp  ServerTest.py  StringFormatTest.hpp  StringTest.hpp  Test.hpp  Test.py  ThreadPoolTest.hpp  TimerTest.hpp  UnicodeTest.hpp  Vector3Test.hpp  Vector4Test.hpp  VectorTest .hpp  VectorTest.hpp
LikesProgram/src/: main.cpp
LikesProgram/src/LikesProgram/: Configuration.cpp  CoreUtils.cpp  Logger.cpp  String.cpp  ThreadPool.cpp  Timer.cpp
LikesProgram/src/LikesProgram/StringFormat/: FormatParser.cpp  FormatSpec.cpp
LikesProgram/src/LikesProgram/log/: Logger.cpp  LoggerType.cpp
LikesProgram/src/LikesProgram/log/sinks/: ConsoleSink.cpp  FileSink.cpp  Sink.cpp
LikesProgram/src/LikesProgram/math/: Math.cpp  PercentileSketch.cpp  Vector.cpp  Vector3.cpp  Vector4.cpp
LikesProgram/src/LikesProgram/metrics/: Counter.cpp  Gauge.cpp  Histogram.cpp  Metrics.cpp  Registry.cpp  Summary.cpp
LikesProgram/src/LikesProgram/net/: Address.cpp  Broadcast.cpp  Buffer.cpp  Channel.cpp  Client.cpp  Connection.cpp  EventLoop.cpp  MainEventLoop.cpp  Poller.cpp  Server.cpp  Transport.cpp
LikesProgram/src/LikesProgram/net/pollers/: EpollPoller.cpp  WindowsSelectPoller.cpp
LikesProgram/src/LikesProgram/server/: EventLoop.cpp  Server.cpp
LikesProgram/src/LikesProgram/server/pollers/: EpollPoller.cpp  WindowsSelectPoller.cpp
LikesProgram/src/LikesProgram/stringFormat/: FormatInternal.cpp  FormatParser.cpp
LikesProgram/src/LikesProgram/system/: CoreUtils.cpp  ErrorDomainRegistry.cpp
LikesProgram/src/LikesProgram/threading/: IThreadPoolObserver.cpp  ThreadPool.cpp
LikesProgram/src/LikesProgram/time/: Time.cpp  Timer.cpp
LikesProgram/src/LikesProgram/unicode/: CaseBMP.cpp  CaseSMP.cpp  Convert.cpp  CreateUnicodeCaseMap.py
